--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <span>Levi's</span><br>
                     <span>RELAXD FIT TEE UNISEX</span><br>
                     <span>14,99€</span>
-                    <span>20,99€</span>
+                    <!-- <span>20,99€</span> -->
+                    <del>14,99</del>
                 </div>
             </div>
             <div class="card">
@@ -92,7 +93,7 @@
                 </div>
                   <img src="./img/6.webp" alt="">
                   <img src="./img/6b.webp" alt="">
-                    <span class="sostenibilità">Sostenibilità</span>
+                    <span  class="sostenibilità">Sostenibilità</span>
                 <div class="description">
                     <span>Espirit</span><br>
                     <span>MAGLIONE BLACK</span><br>
